Added user show_age option

--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,6 +1,6 @@
 #logo
   = link_to_unless_current (image_tag "logo_b.png", :alt => "Talks", :height => 40, :width => 150 ), root_path
--# #search
+#search
   %form.form-search{:action => "/search"}
     .item
       %label.form-label{:for => ""} Поиск по сайту
