Added Facebook comments plugin

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,8 @@
     = render "shared/analytics"   
   %body     
     = render "shared/admin_pane"
-    = render "shared/fb_root"
+    = render "shared/vk_init"
+    = render "shared/fb_init"
     #layout      
       #header
         = render "shared/header"
