Added some fb param to html tag

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,5 +1,5 @@
 !!!
-%html{:lang => "en-US"}
+%html{:lang => "en-US", :"xmlns:fb" => "http://www.facebook.com/2008/fbml", :"xmlns:og" => "http://opengraphprotocol.org/schema/"}
   %head
     = render "shared/meta"
     = render "shared/analytics"   
