Improved abilities model and added RSS

--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -18,7 +18,7 @@
       %a{:href => "#"} Помощь
 .others
   .rss
-    %a{:href => "#"}
+    %a{:href => recent_posts_path(:format => :rss)}
       RSS
       %i
   .counter
