--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -103,6 +103,7 @@ body {
 	background-color: #f8f8f8;
 	border: 0px;
 	display: block;
+	font-size: 12px;
 	height: 15px;
 	line-height: 15px;
 	margin: 0px;
