--- a/app/views/posts/search.html.haml
+++ b/app/views/posts/search.html.haml
@@ -1,4 +1,4 @@
-- title "Поиск: «#{@query}» — #{search_results_count @posts.count, 2}"
+- title "Поиск: «#{@query}» — #{search_results_count @posts.total_entries, 2}"
 
 %h1.form Результаты поиска
 %span.head-note.block-inline 
@@ -7,7 +7,7 @@
 .b-search-field  
   %form{:action => "/search"}
     %input{:name => "query", :type => "search", :value => @query}
-    %span.results-count= search_results_count @posts.count
+    %span.results-count= search_results_count @posts.total_entries
   %hr/
   
   
