created about-page skeleton

--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -1,1 +1,47 @@
-%h1 Что такое Talks?
+- title "О проекте"
+
+.b-whatistalks
+  .b-title
+    %h1
+      Что такое
+      = image_tag 'logo-big.png'
+      ?
+    %span
+      Токс — это такой маленький и уютный клуб любителей цитат.
+  .b-meganthecat
+    %small
+      Нашу кошку зовут Меган.
+      %br/
+      Она любит, когда ее гладят.
+  .b-important-content
+    .b-block
+      %h2 О цитатах
+      %p
+        Цитаты берутся отовсюду. Лучше, если это какой-то диалог: из любимого кино, недавно прочитанной книги, полуночной болтовни в скайпе и т.д. Цитата является телом так называемого параграфа.
+    .b-block
+      %h2 О параграфах
+      .b-definition
+      %p Параграф -- это сеть ассоциаций в вашей голове. Места узлов в этой сети занимают три простые составляющие:
+      .b-par_adding
+        
+    .b-block
+      %h2 О песнях и фото
+      %p
+        Много песен есть на
+        = link_to 'Простоплеере', 'http://prostopleer.com'
+        и
+        = succeed "." do
+          = link_to 'Вебораме', 'http://weborama.ru'        
+      %p
+        Фотографии можно загружать свои, либо их можно позаимствовать у других. При этом нам необходимо, чтобы вы указывали автора загруженной фотографии. Параграфы без указания автора картинки будут удаляться. Найти автора фотографии или найти изображение размером побольше можно при помощи
+        = succeed "." do
+          = link_to 'tineye.com'
+        Кстати, Токс очень любит картинки в пропорциях 550х370.
+    .b-block
+      %h2 О самочувствии
+      %p
+        Напишите нам как вы себя здесь чувствуете по адресу
+        = succeed "." do
+          = mail_to 'howareyoufeeling@t-a-l-k-s.com'
+        Нам это очень важно.
+          
