about page is done now

--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -17,12 +17,12 @@
     .b-block
       %h2 О цитатах
       %p
-        Цитаты берутся отовсюду. Лучше, если это какой-то диалог: из любимого кино, недавно прочитанной книги, полуночной болтовни в скайпе и т.д. Цитата является телом так называемого параграфа.
+        Цитаты берутся отовсюду. Лучше, если это какой-то диалог: из любимого кино, недавно прочитанной книги, полуночной болтовни в скайпе и т.д. Цитата является телом так называемого параграфа.        
     .b-block
       %h2 О параграфах
-      .b-definition
-      %p Параграф -- это сеть ассоциаций в вашей голове. Места узлов в этой сети занимают три простые составляющие:
+      %p Параграф — это сеть ассоциаций в вашей голове. Места узлов в этой сети занимают три простые составляющие:
       .b-par_adding
+        = image_tag 'par-scheme.jpg'
         
     .b-block
       %h2 О песнях и фото
@@ -32,7 +32,7 @@
         и
         = succeed "." do
           = link_to 'Вебораме', 'http://weborama.ru'        
-      %p
+        %br/
         Фотографии можно загружать свои, либо их можно позаимствовать у других. При этом нам необходимо, чтобы вы указывали автора загруженной фотографии. Параграфы без указания автора картинки будут удаляться. Найти автора фотографии или найти изображение размером побольше можно при помощи
         = succeed "." do
           = link_to 'tineye.com'
