--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -9,7 +9,7 @@
 .links
   %ul
     %li
-      %a{:href => "#"} О проекте
+      = link_to 'О проекте', page_path(:id => "about")
     %li
       %a{:href => "#"} Владельцам
     %li
