--- a/app/stylesheets/application.less
+++ b/app/stylesheets/application.less
@@ -1,11 +1,11 @@
-.b-whatistalks {
-	
+.b-whatistalks {	
 	.b-title {
 		border-bottom: #888 1px solid;
 		margin-bottom: 1.5em;
 		position: relative;				
 		text-align: center;
 		width: 100%;
+		padding-bottom: 1.5em;
 		
 		h1 {	
 			font-family: 'Geogia', serif;
@@ -24,7 +24,7 @@
 		background: url("/images/meganthecat.jpg") no-repeat 50%;
 		width: 100%;
 		height: 150px;
-		text-align: center;
+		text-align: center;		
 		
 		small {
 			display: inline-block;
@@ -36,19 +36,38 @@
 	.b-important-content {
 		display: inline-block;
 		width: 100%;
+		margin-top: 60px;
 		margin-right: -50px;
-		padding-left: 125px;
+		padding-left: 130px;
 		position: relative;		
 		zoom: 1;
+		
+		h2 {
+			margin: 0px 0px 0.648em 0px;
+			padding: 0px;
+			font-family: 'Times New Roman';
+			font-size: 26px;
+			font-style: bold;
+		}
+		
+		p {
+			font-size: 14px;
+			line-height: 1.34em;
+			margin-bottom: 1.34em;
+		}
 		
 		.b-block {
 			position: relative;
 			display: inline-block;
 			width: 350px;
-			float: left;
 			margin-right: 50px;
-			height: 250px;
+			margin-bottom: 30px;
+			vertical-align: top;
 			zoom: 1;
+			
+			.b-par_adding {
+				margin-top: -6px;
+			}			
 		}
 	}
 }
