about page title border color is now brighter

--- a/app/stylesheets/application.less
+++ b/app/stylesheets/application.less
@@ -1,7 +1,8 @@
 .b-whatistalks {	
 	.b-title {
-		border-bottom: #888 1px solid;
+		border-bottom: #666 1px solid;
 		margin-bottom: 1.5em;
+		margin-top: 1.5em;
 		position: relative;				
 		text-align: center;
 		width: 100%;
