about page title border color is now brighter

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -9,8 +9,9 @@
 
 
 */.b-whatistalks .b-title {
-  border-bottom: #888888 1px solid;
+  border-bottom: #666666 1px solid;
   margin-bottom: 1.5em;
+  margin-top: 1.5em;
   position: relative;
   text-align: center;
   width: 100%;
