clicky stats added

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,4 +19,5 @@
         = render "shared/footer"        
         
     = render "shared/reformal"
-    = render "shared/metrika"    
+    = render "shared/metrika"  
+    = render "shared/clicky"  
