--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -54,7 +54,8 @@
             = link_to @post.user.username, @post.user
             = I18n.l @post.created_at.to_time
         %hr/
-        = f.input :is_published, :label => 'Публиковать', :hint => 'Показывать параграф другим пользователям.'
+      - if can? :assign_published, @post
+        = f.input :is_published, :label => 'Публиковать', :hint => 'Показывать параграф другим пользователям.', :input_html => { :checked => true }
         %hr/
         
       = f.input :picture, :as => :file, :label => 'Картинка', :required => true
