added a what-is-talks link to main page

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -225,6 +225,31 @@ body {
 
 
 /**
+ * What Is Talks?
+ */
+#what-is-talks {
+	font-size: 14px;
+	position: absolute;
+	right: 0;
+	top: 49px;
+}
+
+#what-is-talks a {	
+	color: #15A;
+	text-decoration: none;
+	border-bottom: 1px solid red;
+}
+
+#what-is-talks a:hover {
+	text-decoration: none;
+	color: #222 !important;
+}
+
+#what-is-talks a:visited {
+	color: #15A;
+}
+
+/**
  * User Bar
  */
 #user-bar {
