--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -17,6 +17,9 @@
   = social_button('Facebook', 'http://www.facebook.com/pages/Talks/162342890449495', 'facebook')  
   = social_button('Twitter', 'http://twitter.com/talks_news', 'twitter')
   = social_button('Vkontakte', 'http://vkontakte.ru/club20484089', 'vkontakte')
+- if params[:controller] == "home"
+  #what-is-talks  
+    = link_to_unless_current "Что это такое?", page_path("about")
 #user-bar
   - if signed_in?
     %ul.login-links
