--- a/app/views/weeks/edit.html.haml
+++ b/app/views/weeks/edit.html.haml
@@ -1,6 +1,7 @@
-<h1>Editing week</h1>
+- title 'Редактирование недели'
 
-<%= render 'form' %>
-
-<%= link_to 'Show', @week %> |
-<%= link_to 'Back', weeks_path %>
+%h1.form Редактирование недели
+%span.head-note.block-inline Поля помеченные * обязательны для заполнения
+.b-line.b-line-thin
+  
+= render "form"
