--- a/app/views/weeks/edit.html.haml
+++ b/app/views/weeks/edit.html.haml
@@ -1,7 +1,7 @@
 - title 'Редактирование недели'
 
 %h1.form Редактирование недели
-%span.head-note.block-inline Поля помеченные * обязательны для заполнения
+%span.head-note.block-inline Все поля обязательны для заполнения
 .b-line.b-line-thin
   
 = render "form"
