--- a/app/views/weeks/new.html.haml
+++ b/app/views/weeks/new.html.haml
@@ -1,7 +1,7 @@
 - title 'Новая неделя'
 
 %h1.form Создание новой недели
-%span.head-note.block-inline Поля помеченные * обязательны для заполнения
+%span.head-note.block-inline Все поля обязательны для заполнения
 .b-line.b-line-thin
   
 = render "form"
