week page header

--- a/app/stylesheets/application.less
+++ b/app/stylesheets/application.less
@@ -72,3 +72,42 @@
 		}
 	}
 }
+
+.b-week-info-wrap {
+	border-bottom: 1px solid #d6d6d6;
+	position: relative;
+	padding: 0 0 20px 15px;
+	zoom: 1;
+	z-index: 1;
+}
+
+.b-week-info {	
+	width: 100%;
+	position: relative;	
+	zoom: 1;
+	color: #888;
+	line-height: 1.4;
+	
+	.b-week-info-picture {
+		height: 70px;
+		width: 70px;
+		padding-right: 20px;
+		position: relative;
+		float: left;
+	}
+	
+	.b-week-info-text {
+		position: relative;
+		width: 60%;
+	}
+	
+	.b-week-info-actions {
+		float: right;
+		position: absolute;
+		top: 0;
+		right: 15px;
+		font-size: 12px;
+	}
+}
+
+.b-line-mid { margin-bottom: 20px !important; }
