--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -72,3 +72,36 @@
   zoom: 1;
 }
 .b-whatistalks .b-important-content .b-block .b-par_adding { margin-top: -6px; }
+.b-week-info-wrap {
+  border-bottom: 1px solid #d6d6d6;
+  position: relative;
+  padding: 0 0 20px 15px;
+  zoom: 1;
+  z-index: 1;
+}
+.b-week-info {
+  width: 100%;
+  position: relative;
+  zoom: 1;
+  color: #888888;
+  line-height: 1.4;
+}
+.b-week-info .b-week-info-picture {
+  height: 70px;
+  width: 70px;
+  padding-right: 20px;
+  position: relative;
+  float: left;
+}
+.b-week-info .b-week-info-text {
+  position: relative;
+  width: 60%;
+}
+.b-week-info .b-week-info-actions {
+  float: right;
+  position: absolute;
+  top: 0;
+  right: 15px;
+  font-size: 12px;
+}
+.b-line-mid { margin-bottom: 20px !important; }
