--- a/app/stylesheets/application.less
+++ b/app/stylesheets/application.less
@@ -84,9 +84,7 @@
 .b-week-info {	
 	width: 100%;
 	position: relative;	
-	zoom: 1;
-	color: #888;
-	line-height: 1.4;
+	zoom: 1;  
 	
 	.b-week-info-picture {
 		height: 70px;
@@ -99,6 +97,8 @@
 	.b-week-info-text {
 		position: relative;
 		width: 60%;
+    color: #888;
+	  line-height: 1.4;
 	}
 	
 	.b-week-info-actions {
@@ -108,6 +108,38 @@
 		right: 15px;
 		font-size: 12px;
 	}
+  
+  .b-week-info-created_at {
+    margin-bottom: 5px;
+    
+    .date {
+      /* font-style: italic; */
+    }
+  }
+  
+  .b-week-info-status {
+    display: block;
+    margin-bottom: 1.4em;
+    
+    a {
+      border-bottom: 1px dotted black;
+      text-decoration: none;
+      color: black;
+    }
+    
+    a:hover, a:visited {
+      color: black;
+      text-decoration: none;
+    }
+  }
+
 }
 
 .b-line-mid { margin-bottom: 20px !important; }
+
+.simple_form {
+  .collection_radio {
+    display: block !important;
+    font-weight: normal;
+  }
+}
