--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -3,11 +3,8 @@
     .column.column-f-x2
       = f.input :title, :label => 'Заголовок'
       = char_counter_for 'post_title', 100  
-      - if @week
-        %div
-          = check_box_tag("post[week_id]", @week.id, @post.week_id.present?)
-          = h @week.name
       = f.input :conversation, :label => 'Диалог'
+      = f.association :week, :as => :radio, :label => "Неделя"      
       .b-formatting-hints#formattingHints       
         .g-left
           %div
