weeks has posts and are barely shown on the main page

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -22,7 +22,7 @@
           .image
             = link_to image_tag(post.picture.url(:preview), :class => "rc4"), post
           .text
-            .header
+            .header            
               %h2
                 = link_to post.title, post
               %span.data
@@ -33,23 +33,25 @@
               = truncate(post.conversation, :length => 80, :separator => ' ').markdown.typography.html_safe
     
               
-    .posts
-      .header
-        %h3 Популярные параграфы
-      - @popular_posts.each do |post|
-        .postPreview
-          .image
-            = link_to image_tag(post.picture.url(:preview), :class => "rc4"), post
-          .text
-            .header
-              %h2
-                = link_to post.title, post
-              %span.data
-                = succeed "," do
-                  = link_to post.user.username, post.user, :class => 'author'
-                = I18n.l post.created_at.to_date
-            .description
-              = truncate(post.conversation, :length => 80, :separator => ' ').markdown.typography.html_safe
+    - if @week_is_ready
+      .posts
+        .header
+          %h3.last_week-header
+            = link_to @last_week.name, @last_week
+        - @last_week_posts.each do |post|
+          .postPreview
+            .image
+              = link_to image_tag(post.picture.url(:preview), :class => "rc4"), post
+            .text
+              .header
+                %h2
+                  = link_to post.title, post
+                %span.data
+                  = succeed "," do
+                    = link_to post.user.username, post.user, :class => 'author'
+                  = I18n.l post.created_at.to_date
+              .description
+                = truncate(post.conversation, :length => 80, :separator => ' ').markdown.typography.html_safe
             
   .column.column2-x1.column-last
     %br
