--- a/app/views/weeks/show.html.haml
+++ b/app/views/weeks/show.html.haml
@@ -6,10 +6,7 @@
 
 .b-week-info-wrap
   .b-week-info
-    .b-week-info-picture
-      = image_tag @week.picture.url(:thumb)
-    .b-week-info-text
-      = @week.description       
+    = render "header"
     .b-week-info-actions      
       .b-week-info-created_at 
         Неделя была создана
@@ -22,3 +19,21 @@
       %br
       = link_to 'Удалить', @week, :confirm => 'Вы уверены?', :method => :delete, :class => 'b-func-button-destroy'
   .clear
+  
+.columns
+  .column.column2-x2
+    .posts
+      - @week.posts.each do |post|
+        .postPreview
+          .image
+            = link_to image_tag(post.picture.url(:preview), :class => "rc4"), post
+          .text
+            .header
+              %h2
+                = link_to post.title, post
+              %span.data
+                = succeed "," do
+                  = link_to post.user.username, post.user, :class => 'author'
+                = I18n.l post.created_at.to_date
+            .description
+              = truncate(post.conversation, :length => 80, :separator => ' ').markdown.typography.html_safe
