--- a/app/stylesheets/application.less
+++ b/app/stylesheets/application.less
@@ -75,6 +75,7 @@
 
 .b-week-info-wrap {
 	border-bottom: 1px solid #d6d6d6;
+  margin-bottom: 1.633em;
 	position: relative;
 	padding: 0 0 20px 15px;
 	zoom: 1;
@@ -85,6 +86,18 @@
 	width: 100%;
 	position: relative;	
 	zoom: 1;  
+  
+  .b-week-title {
+    margin-bottom: 1.4em;
+    color: black; 
+    position: relative;
+    
+    h2 {
+      margin: 0;
+      padding: 0;
+      font-size: 16px;
+    }
+  }
 	
 	.b-week-info-picture {
 		height: 70px;
@@ -131,7 +144,7 @@
       color: black;
       text-decoration: none;
     }
-  }
+  }  
 
 }
 
@@ -141,5 +154,26 @@
   .collection_radio {
     display: block !important;
     font-weight: normal;
+  }
+}
+
+h3.last_week-header {
+  border-bottom-color: #15A !important;
+  
+  a {
+    text-decoration: none;
+  }
+}
+
+.p-post {
+  span.week {
+    display: inline-block;
+    margin-bottom: 5px;
+    
+    a {
+      border-bottom: 1px solid red;
+      color: #15A;
+      text-decoration: none;
+    }
   }
 }
