--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -2,6 +2,15 @@
 
 %h1.form Создание нового параграфа
 %span.head-note.block-inline Поля помеченные * обязательны для заполнения
-.b-line.b-line-thin
+
+-if @show_week_header
+  .b-line.b-line-thin.b-line-mid
+  
+  .b-week-info-wrap
+    .b-week-info      
+      = render "weeks/header"
+    .clear
+- else
+  .b-line.b-line-thin
 
 = render 'form'
