--- a/app/stylesheets/application.less
+++ b/app/stylesheets/application.less
@@ -165,6 +165,35 @@ h3.last_week-header {
   }
 }
 
+.week-preview-wrap {
+  position: relative;
+  width: 70%;
+  margin: 1.4em 10px;  
+  
+  .week-preview-picture {
+    position: relative;
+    float: left;
+    width: 70px;
+  }
+  
+  .week-preview-name {
+    line-height: 1.4;
+    position: relative;
+    margin-left: 80px;
+    
+    span {
+      color: #999;
+      font-size: 12px;
+      display: block;
+    }
+  }
+}
+
+.b-week {
+  margin-top: 0 !important;
+  z-index: 99;  
+}
+
 .p-post {
   span.week {
     display: inline-block;
