main page week container header enhanced

--- a/app/stylesheets/application.less
+++ b/app/stylesheets/application.less
@@ -158,9 +158,10 @@
 }
 
 h3.last_week-header {
-  border-bottom-color: #15A !important;
+  /* border-bottom-color: #15A !important; */
   
   a {
+    font-weight: bold;
     text-decoration: none;
   }
 }
