--- a/app/views/weeks/index.html.haml
+++ b/app/views/weeks/index.html.haml
@@ -1,11 +1,12 @@
 - title "Недели"
 
 %h1.form Недели
-%span.head-note.block-inline Monkeys gone to Heaven
+%span.head-note.block-inline Monkeys gone to Heaven.
 .b-line.b-line-mid.b-line-thin
 
-.b-new-post-link.b-week
-	= link_to "Новая неделя", new_week_path
+- if can? :create, Week
+	.b-new-post-link.b-week
+		= link_to "Новая неделя", new_week_path
 %ul{:style => "margin-top: 15px;"}
 	- @weeks.each do |week|
 		%li
@@ -14,8 +15,5 @@
 					= link_to image_tag(week.picture.url(:thumb), :class => "rc3"), week_path(week)
 				.week-preview-name
 					= link_to week.name, week_path(week)
-					- if !week.is_active?
-						%span= "была закрыта #{I18n.l week.updated_at.to_date}"
-					- else 
-						%span= "открыта уже #{distance_of_time_in_words(Time.now - week.created_at)}"
+					%span= week_status_text(week)
 			.clear
