--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -175,3 +175,86 @@ h3.last_week-header a {
   color: #1155aa;
   text-decoration: none;
 }
+.weeks-list-wrap {
+  font-size: 13px;
+  float: right;
+  line-height: 1.4;
+  position: relative;
+  width: 234px;
+  text-align: left !important;
+  margin-bottom: 1.5em;
+}
+.weeks-list-wrap .weeks-list-header {
+  width: 100%;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #0e0e0e;
+}
+.weeks-list-wrap .weeks-list-header h3 {
+  color: #0e0e0e;
+  font: italic normal normal 18px/20px Helvetica, sans-serif;
+  letter-spacing: normal;
+  line-height: 14px;
+  padding-bottom: 10px;
+  text-transform: uppercase;
+}
+.weeks-list-wrap .weeks-list-footer { text-align: right; }
+#vk_groups {
+  width: 100% !important;
+  float: right;
+  margin-top: 20px;
+}
+.week-rss-wrap {
+  font-size: 11px;
+  margin-right: 10px;
+  margin-top: -5px;
+  position: absolute;
+  right: 0px;
+  text-align: right;
+}
+.week-rss-wrap a {
+  display: inline-block !important;
+  float: left;
+  letter-spacing: 1px;
+  line-height: 1.5;
+  padding: 0px 12px 0px 0px;
+  position: relative;
+  text-transform: uppercase;
+  white-space: nowrap;
+  zoom: 1;
+}
+.week-rss-wrap a i {
+  background: url("/images/rss.png") no-repeat 0px 0px;
+  cursor: pointer;
+  display: block;
+  height: 11px;
+  left: auto;
+  position: absolute;
+  right: 0px;
+  top: 2px;
+  width: 10px;
+}
+div.week {
+  padding-left: 3px;
+  position: relative;
+  float: left !important;
+  margin-bottom: 0 !important;
+}
+div.week .week-picture {
+  float: left;
+  position: relative;
+}
+div.week .week-info {
+  margin-left: 60px;
+  position: relative;
+}
+div.week .week-info span {
+  color: #999999;
+  font-size: 12px;
+  display: block;
+}
+div.week:after {
+  clear: both;
+  content: '';
+  display: block;
+  height: 0;
+}
