weeks announcement on pages/about

--- a/app/stylesheets/application.less
+++ b/app/stylesheets/application.less
@@ -53,8 +53,8 @@
 		
 		p {
 			font-size: 14px;
-			line-height: 1.34em;
-			margin-bottom: 1.34em;
+			line-height: 1.5;
+			margin-bottom: 1.5em;
 		}
 		
 		.b-block {
