--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -38,6 +38,11 @@
           = link_to 'tineye.com'
         Кстати, Токс очень любит картинки в пропорциях 550х370.
     .b-block
+      %h2 О неделях
+      %p
+        Неделя — это больше, чем день, и меньше, чем месяц, отрезок времени, который мы посвящаем созданию параграфов, связанных определенной идеей. Мы порадуем вас любопытными публикациями на разные темы начиная эротикой мартовскими ночами и заканчивая…
+    
+    .b-block
       %h2 О самочувствии
       %p
         Напишите нам как вы себя здесь чувствуете по адресу
