--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -59,8 +59,8 @@
 }
 .b-whatistalks .b-important-content p {
   font-size: 14px;
-  line-height: 1.34em;
-  margin-bottom: 1.34em;
+  line-height: 1.5;
+  margin-bottom: 1.5em;
 }
 .b-whatistalks .b-important-content .b-block {
   position: relative;
