week#show week description simple_format

--- a/app/views/weeks/_header.html.haml
+++ b/app/views/weeks/_header.html.haml
@@ -1,4 +1,4 @@
 .b-week-info-picture
   = image_tag @week.picture.url(:thumb), :class => "rc3"
 .b-week-info-text
-  = @week.description       
+  = simple_format(@week.description.markdown.typography.html_safe)
